--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -735,3 +735,70 @@ public ListNode sortList(ListNode head) {
 }
 ```
 
+## 剑指 Offer II 027. 回文链表
+
+> https://leetcode.cn/problems/aMhZSa/
+>
+> 给定一个链表的 **头节点** `head` **，**请判断其是否为回文链表。
+>
+> 如果一个链表是回文，那么链表节点序列从前往后看和从后往前看是相同的。
+>
+> <img src="./assets/image-20230428154907613.png" alt="image-20230428154907613" style="zoom:50%;" />
+>
+> ```
+> 输入: head = [1,2,3,3,2,1]
+> 输出: true
+> ```
+
+#### 题解：中点后反转链表
+
+**思路**：
+
+- 快慢指针寻找链表中点
+- 反转中点后面的链表，然后和中点前链表对比，判断值是否一样
+
+> **注意**：
+>
+> 这题不能直接将整个链表反转然后比较，因为反转整个链表后head指针就变了（即原链表就变了）
+>
+> 例如： 1->2->3->4， 反转后：1<-2<-3<-4，反转后head指向1，但是head.next为空了
+
+```java
+class Solution {
+    public boolean isPalindrome(ListNode head) {
+        // 找中点
+        ListNode slow = head, fast = head;
+        while (slow != null && fast != null) {
+            slow = slow.next;
+            fast = fast.next;
+            if (fast != null) {
+                fast = fast.next;
+            }
+        }
+        // 反转中点以后的链表
+        ListNode reverseLink = reverseLink(slow);
+        ListNode cur = head, reverseCur = reverseLink;
+        while (cur != null && reverseCur != null) {
+            if (cur.val != reverseCur.val) {
+                return false;
+            }
+            cur = cur.next;
+            reverseCur = reverseCur.next;
+        }
+        return true;
+    }
+
+    // 
+    public ListNode reverseLink(ListNode head) {
+        ListNode cur = head, pre = null;
+        while (cur != null) {
+            ListNode next = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = next;
+        }
+        return pre;
+    }
+}
+```
+
