--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -788,7 +788,7 @@ class Solution {
         return true;
     }
 
-    // 
+    // 反转链表
     public ListNode reverseLink(ListNode head) {
         ListNode cur = head, pre = null;
         while (cur != null) {
@@ -799,6 +799,190 @@ class Solution {
         }
         return pre;
     }
+}
+```
+
+## 328. 奇偶链表
+
+> 给定单链表的头节点 `head` ，将所有索引为奇数的节点和索引为偶数的节点分别组合在一起，然后返回重新排序的列表。
+>
+> **第一个**节点的索引被认为是 **奇数** ， **第二个**节点的索引为 **偶数** ，以此类推。
+>
+> 请注意，偶数组和奇数组内部的相对顺序应该与输入时保持一致。
+>
+> 你必须在 `O(1)` 的额外空间复杂度和 `O(n)` 的时间复杂度下解决这个问题。
+>
+> <img src="./assets/image-20230428155628067.png" alt="image-20230428155628067" style="zoom:50%;" />
+>
+> ```
+> 输入: head = [1,2,3,4,5]
+> 输出: [1,3,5,2,4]
+> ```
+
+#### 题解：正常思路
+
+- 一次遍历链表，分别将奇数偶数挑出来存储到新链表中
+- 将偶数链表接到奇数链表后面
+
+```java
+public ListNode oddEvenList(ListNode head) {
+    // 存储奇数链表
+    ListNode odd = new ListNode(-1);
+    // 存储偶数链表
+    ListNode even = new ListNode(-1);
+    // 判断当前是奇数索引节点还是偶数索引节点
+    int index = 0;
+    // cur: 遍历链表; oddRes: 接收奇数节点; evenRes: 接收偶数节点
+    ListNode cur = head, oddRes = odd, evenRes = even;
+    while (cur != null) {
+        index++;
+        if (index % 2 != 0) {
+            // 如果是奇数索引节点, 连接到奇数链表中
+            oddRes.next = new ListNode(cur.val);
+            oddRes = oddRes.next;
+        } else {
+            // 如果是偶数索引节点, 连接到偶数链表中
+            evenRes.next = new ListNode(cur.val);
+            evenRes = evenRes.next;
+        }
+        cur = cur.next;
+    }
+    // 最后将偶数结果链表接到奇数结果链表中返回
+    oddRes.next = even.next;
+    return odd.next;
+}
+```
+
+## 83. 删除排序链表中的重复元素
+
+> https://leetcode.cn/problems/remove-duplicates-from-sorted-list/description/
+>
+> 给定一个已排序的链表的头 `head` ， *删除所有重复的元素，使每个元素只出现一次* 。返回 *已排序的链表* 。
+>
+> ```
+> 输入：head = [1,1,2]
+> 输出：[1,2]
+> ```
+>
+> ```
+> 输入：head = [1,1,2,3,3]
+> 输出：[1,2,3]
+> ```
+
+#### 题解：Set集合+链表删除
+
+- 删除链表元素需要一个前置指针`pre`
+- 遍历判断元素是否在集合中，在就删除元素，不再则添加到集合中，把当前元素作为前置节点
+
+```java
+public ListNode deleteDuplicates(ListNode head) {
+    Set<Integer> set = new HashSet<>();
+    ListNode dummy = new ListNode(-1);
+    dummy.next = head;
+    // cur: 遍历指针; pre: 因为要删除元素，所以需要一个前置指针指向第一个不重复元素, 如: [1, 1, 1] pre指向第一个1
+    ListNode cur = head, pre = cur;
+    while (cur != null) {
+        if (set.contains(cur.val)) {
+            // 遇到重复元素, 直接删除
+            pre.next = cur.next;
+        } else {
+            // 遇到不重复元素, 将pre指针指向当前
+            set.add(cur.val);
+            pre = cur;
+        }
+        // 遍历
+        cur = cur.next;
+    }
+    return dummy.next;
+}
+```
+
+## 82. 删除排序链表中的重复元素 II
+
+> https://leetcode.cn/problems/remove-duplicates-from-sorted-list-ii/description/
+>
+> 给定一个已排序的链表的头 `head` ， *删除原始链表中所有重复数字的节点，只留下不同的数字* 。返回 *已排序的链表* 。
+>
+> ```
+> 输入：head = [1,2,3,3,4,4,5]
+> 输出：[1,2,5]
+> ```
+
+#### 题解一：遍历两次删除两遍
+
+在[删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/description/)中是留下一个重复元素，可以在此基础上再把剩下的重复元素删除。
+
+- 两个`set`，第一个`set`用于删除重复节点，保留一个。第二个`set`用于存储重复的节点，用在第二次遍历中删除。
+
+```java
+public ListNode deleteDuplicates(ListNode head) {
+    ListNode dummy = new ListNode(-1);
+    dummy.next = head;
+    // 先去一遍重: 例如原链表: [1, 1, 1, 2, 2, 3, 4, 5]
+    // 第一遍去重后: [1, 2, 3, 4, 5], 同时将重复元素记录到tSet中
+    ListNode cur = dummy.next, pre = cur;
+    Set<Integer> set = new HashSet<>();
+    Set<Integer> tSet = new HashSet<>();
+    while (cur != null) {
+        if (set.contains(cur.val)) {
+            pre.next = cur.next;
+            tSet.add(cur.val);
+        } else {
+            set.add(cur.val);
+            pre = cur;
+        }
+        cur = cur.next;
+    }
+    // 第二遍去重: 遍历第一遍去重后链表判断元素是否在tSet中, 有则需要再去掉该元素
+    // 由于链表第一个元素有可能需要去掉, 所以需要记录-1节点位置
+    ListNode ptr = dummy, pro = ptr;
+    while (ptr != null) {
+        if (tSet.contains(ptr.val)) {
+            pro.next = ptr.next;
+        } else {
+            pro = ptr;
+        }
+        ptr = ptr.next;
+    }
+    return dummy.next;
+}
+```
+
+#### 题解二：遍历一次删除
+
+- 每次遍历`cur`指向留下的节点并表示前置节点。
+- 比较cur.next和cur.next.next值是否相等：相等就说明这是个重复节点，需要删除，但需要寻找出所有等于该值的节点全部删除，所以再加个`while`循环遍历寻找相等的节点
+
+```java
+public ListNode deleteDuplicates(ListNode head) {
+    ListNode dummy = new ListNode(-1);
+    dummy.next = head;
+    ListNode cur = dummy;
+    /**
+         * 关键点: cur指针始终指向前置元素
+         * 由于是升序链表, 设当前节点是cur, 直接比较cur.next和cur.next.next值是否相等即可确定是否需要删除
+         *      -1 -> 1 -> 1 -> 1 -> 2 -> 3
+         *      cur  ptr ...........ptr
+         */
+    while (cur.next != null && cur.next.next != null) {
+        if (cur.next.val == cur.next.next.val) {
+            // 遍历指针, 跳出循环指向下一个不重复元素
+            ListNode ptr = cur.next;
+            while (ptr != null && ptr.val == cur.next.val) {
+                ptr = ptr.next;
+            }
+            /**
+                 * 考虑到下面这种情况, 下一次循环仍需要丢弃2元素
+                 *      -1 -> 1 -> 1 -> 1 -> 2 -> 2
+                 *      cur  ptr ...........ptr
+                 */
+            cur.next = ptr;
+        } else {
+            // 不是重复元素, cur后移
+            cur = cur.next;
+        }
+    }
+    return dummy.next;
 }
 ```
 
