剑指 Offer II 046. 二叉树的右侧视图

--- a/算法笔记/二叉树专题.md
+++ b/算法笔记/二叉树专题.md
@@ -696,3 +696,39 @@ public TreeNode buildTree(int[] preorder, int startPreOrder, int endPreOrder, in
 }
 ```
 
+## 剑指 Offer II 046. 二叉树的右侧视图
+
+> https://leetcode.cn/problems/WNC0Lk/
+>
+> 给定一个二叉树的 **根节点** `root`，想象自己站在它的右侧，按照从顶部到底部的顺序，返回从右侧所能看到的节点值。
+>
+> <img src="./assets/image-20230515125911354.png" alt="image-20230515125911354" style="zoom:50%;" />
+
+#### 题解：层序遍历
+
+**思路**：层序遍历每层最后一个节点就是右视图看到的节点
+
+```java
+public List<Integer> rightSideView(TreeNode root) {
+    List<Integer> res = new ArrayList<>();
+    if (root == null) {
+        return res;
+    }
+    Queue<TreeNode> queue = new LinkedList<>();
+    queue.offer(root);
+    while (!queue.isEmpty()) {
+        int size = queue.size();
+        for (int i = 0; i < size; i++) {
+            TreeNode node = queue.poll();
+            // 如果是队列最后一个则添加到结果集中
+            if (i == size - 1) {
+                res.add(node.val);
+            }
+            if (node.left != null) queue.offer(node.left);
+            if (node.right != null) queue.offer(node.right);
+        }
+    }
+    return res;
+}
+```
+
