--- a/业务处理思考/记一次数据库扩容处理过程.md
+++ b/业务处理思考/记一次数据库扩容处理过程.md
@@ -12,7 +12,7 @@
 
 ![image-20220724145422950](./assets/202207241454438.png)
 
-2. 上线代码，分库分表映射方案在后面。使用两个新集群的数据库地址，进行查询和插入。这时两个新数据库的proxy还是指向旧数据库。同时验证数据是否写到旧数据库
+2. 上线代码，分库分表映射方案在后面。使用两个新集群的数据库地址，进行查询和插入。这时两个新数据库的proxy还是指向旧数据库。同时验证数据是否写到旧数据库。如果直接将proxy链接到新库A和B，会造成主键冲突。
 
 ![image-20220724145612990](./assets/202207241456533.png)
 
