--- a/算法笔记/递归回溯专题.md
+++ b/算法笔记/递归回溯专题.md
@@ -296,7 +296,7 @@ public void dfs(List<String> res, int n, StringBuilder sb, int open, int close) 
 ```java
 class Solution {
     // 四个方向
-    private int[][] dirs = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}};
+    {% raw %}private int[][] dirs = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}};{% endraw %}
     private int rows, cols;
     public int longestIncreasingPath(int[][] matrix) {
         if (matrix == null || matrix.length == 0 || matrix[0].length == 0) {
