--- a/分布式系统设计方案思考/缓存一致性方案思考.md
+++ b/分布式系统设计方案思考/缓存一致性方案思考.md
@@ -17,7 +17,7 @@
 
 上面情况，就会导致线程B的缓存值被线程A覆盖，**缓存中存的是线程A的旧值**，产生脏数据并且直到缓存失效（如果有过期时间）。
 
-<img src="./assets/image-20230620164505738.png" alt="image-20230620164505738" style="zoom:50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252234.png" alt="image-20230620164505738" style="zoom:50%;" />
 
 #### 2. 先更新缓存再更新数据库
 
@@ -27,7 +27,7 @@
 
 和前面一种情况相反，**缓存中是线程B的新值，而数据库中是线程A的旧值。**
 
-<img src="./assets/image-20230620170050262.png" alt="image-20230620170050262" style="zoom:50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252759.png" alt="image-20230620170050262" style="zoom:50%;" />
 
 ﻿前两种方式之所以会在并发场景下出现异常，**本质上是因为更新缓存和更新数据库是两个操作**。
 
@@ -39,7 +39,7 @@
 
 但这时另一个**并发场景**：两个并发操作，一个是更新操作，另一个是查询操作，更新操作删除缓存后，查询操作没有命中缓存，先把老数据读出来后放到缓存中，然后更新操作更新了数据库。于是，在缓存中的数据还是老的数据，导致缓存中的数据是脏的。很显然，这种状况也不是我们想要的。
 
-<img src="./assets/image-20230620170016670.png" alt="image-20230620170016670" style="zoom:50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252794.png" alt="image-20230620170016670" style="zoom:50%;" />
 
 **解决方案**：
 
@@ -65,13 +65,13 @@
 
 **场景**：一个是查询操作，一个是更新操作的并发，我们先更新了数据库中的数据，此时，缓存依然有效，所以，并发的查询操作拿的是没有更新的数据，但是，删除操作马上让缓存的失效了，后续的查询操作再把数据从数据库中拉出来。而不会方案3一样，后续的查询操作一直在取老的数据。如下图：
 
-<img src="./assets/image-20230619202426780.png" alt="image-20230619202426780" style="zoom: 50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252546.png" alt="image-20230619202426780" style="zoom: 50%;" />
 
 但是，这种策略也不是一定完美。看下面这个场景：
 
 一个读操作没有命中缓存，然后就去数据库中获取数据。此时有一个写操作，写完数据库后，让缓存失效。然后之前的读操作再把老的数据写回缓存，这样就造成脏数据。
 
-<img src="./assets/image-20230620170340552.png" alt="image-20230620170340552" style="zoom:50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252030.png" alt="image-20230620170340552" style="zoom:50%;" />
 
 上面的例子理论上会出现，但是出现概率比较低。因为条件需要读缓存时缓存正好失效，并且此时并发一个写操作。而数据库写操作比读操作慢的多，而读操作读操作必须在写操作之前，又要晚于写操作更新缓存。所有条件在一起的可能性并不大。
 
@@ -81,7 +81,7 @@
 
 举例说明：应用要把数据 X 的值从 1 更新为 2，先成功更新了数据库，然后在 Redis 缓存中删除 X 的缓存，但是这个操作却失败了，这个时候数据库中 X 的新值为 2，Redis 中的 X 的缓存值为 1，出现了数据库和缓存数据不一致的问题。
 
-<img src="./assets/image-20230620170950273.png" alt="image-20230620170950273" style="zoom:50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252746.png" alt="image-20230620170950273" style="zoom:50%;" />
 
 那么，后续有访问数据 X 的请求，会先在 Redis 中查询，因为缓存并没有删除，所以会缓存命中，但是读到的却是旧值 1。
 
@@ -101,7 +101,7 @@
 
 举个例子，来说明重试机制的过程：
 
-<img src="./assets/image-20230620171258860.png" alt="image-20230620171258860" style="zoom:50%;" />
+<img src="https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262252738.png" alt="image-20230620171258860" style="zoom:50%;" />
 
 #### 订阅 MySQL binlog，再操作缓存
 
@@ -113,7 +113,7 @@ Canal 模拟 MySQL 主从复制的交互协议，把自己伪装成一个 MySQL 
 
 下图是 Canal 的工作原理：
 
-![image-20230619225953489](./assets/image-20230619225953489.png)
+![image-20230619225953489](https://floweryu-image.oss-cn-shanghai.aliyuncs.com/image202306262253576.png)
 
 综上，**如果要想保证「先更新数据库，再删缓存」策略第二个操作能执行成功，可以使用「消息队列来重试缓存的删除」，或者「订阅 MySQL binlog 再操作缓存」，这两种方法有一个共同的特点，都是采用异步操作缓存。**
 
