--- a/Work/备忘录.md
+++ b/Work/备忘录.md
@@ -31,8 +31,27 @@ dpa list
 # 查看详细Job信息
 dpa status {job}
 # 查看进程线程数
-top -H -p {pid}
+top -Hp {pid}
 # 查看当前Java进行堆栈状态
 jstack {pid}
 ```
 
+
+
+`top`命令按照cpu排序，找到cpu占用最多的进程进程id
+
+<img src="./assets/image-20230627195652656.png" alt="image-20230627195652656" style="zoom:50%;" />
+
+`top -Hp 进程ID` 找到相关负载线程pid
+
+<img src="./assets/image-20230627195734288.png" alt="image-20230627195734288" style="zoom:50%;" />
+
+`printf "0x%x\\n" 线程pid` 将线程pid转换成16进制
+
+![image-20230627195755679](./assets/image-20230627195755679.png)
+
+
+
+jstack 进程pid | grep -C 10 线程pid十六进制
+
+<img src="./assets/image-20230627195825768.png" alt="image-20230627195825768" style="zoom:50%;" />
